2012-06-12  6.7.7-8 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * Refactor Catmull-Rom and Spline "interpolation" using
    state-of-the-art unpublished formulas
  * Fix incorrect transparency handling of "interpolative" cubic
    B-spline smoothing

2012-06-09  6.7.7-8 Cristy  <quetzlzacatenango@image...>
  * Initialize alpha channel when floodfill fill color is not opaque.

2012-06-08  6.7.7-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-7, SVN revision 8219.

2012-06-06  6.7.7-7 Glenn Randers-Pehrson <glennrp@image...>
  * Disabled the new libpng-1.5.10 test for invalid palette index when
    reading a PNG or MNG (for speed), or when writing a MNG (because a
    zero-length PLTE is valid in a MNG when the global PLTE is used).
  * Display the PNG colortype as a string in "identify -verbose" output.

2012-06-06  6.7.7-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Small refactor of Average Interpolators (save some multiplies)
  * Added 'Spline' as a filter type as an alias to 'Cubic'. this brings both
    Catrom and Spline -filter and -interpolate methods in line.  Cubic should
    only be used when defining a general cubic using expert settings or
    when listed in "filter:verbose" debugging output.

2012-06-05  6.7.7-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-6, SVN revision 8164.

2012-06-05  6.7.7-6 Anthony Thyssen <A.Thyssen@griffith...>
  * Renamed 'Bicubic' interpolation the more precise definition 'Catrom'
    Old name kept (but hidden) for backward compatibility in bit CLI and
    API interfaces.

2012-06-01  6.7.7-6 Cristy  <quetzlzacatenango@image...>
  * The -set colorspace option sets the colorspace, it does not transform it.
  * Assume grayscale images in the GIF format are linear.
  * Add Nicolas Robidoux's bicubic interpolation method (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21118).
    This replaces the old 'bicubic' which was very extreme 'cardinal' cubic.